# BMH-admin-portal

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  NOTICE  README.md  package-lock.json
.github/workflows/: ci.yaml
bmh_admin_portal_backend/: .gitignore  README.md  app.py  pyproject.toml  setup.py
bmh_admin_portal_backend/bmh_admin_portal_backend/: bmh_admin_portal_backend_stack.py  bmh_admin_portal_config.py  bmh_admin_portal_config_TEMPLATE.py  bmh_cognito_userpool.py  stepfunctions_workflow.py
bmh_admin_portal_backend/bmh_admin_portal_backend/brh_provisioning/: adminvm.py  base_workflow.py  run_command_workflow_step.py
bmh_admin_portal_backend/lambda/approve_deny_request/: approve_deny_request.py
bmh_admin_portal_backend/lambda/create_workspace/: create_workspace.py
bmh_admin_portal_backend/lambda/deploy_brh_infra/: deploy_brh_infra.py
bmh_admin_portal_backend/lambda/lambda_authorizer/: lambda_authorizer.py  requirements.txt
bmh_admin_portal_backend/lambda/poll_approval_tasks/: poll_approval_tasks.py
bmh_admin_portal_backend/lambda/step_functions_handler/src/: app.py  util.py
bmh_admin_portal_backend/lambda/step_functions_handler/src/db/: client.py
bmh_admin_portal_backend/lambda/step_functions_handler/src/email/: email.py
bmh_admin_portal_backend/lambda/step_functions_handler/src/handlers/: __init__.py  email_handler.py  failure_handler.py  provision_brh_handler.py  ssm_check_command_status.py  ssm_run_command_handler.py  success_handler.py
bmh_admin_portal_backend/lambda/store_workspace_registration_info/: store_workspace_registration_info.py
bmh_admin_portal_backend/lambda/workspaces_api_resource/: workspaces_api_resource_handler.py
bmh_admin_portal_backend/lambda/workspaces_api_resource/email_helper/: email_helper.py
bmh_admin_portal_backend/lambdas/lambda_authorizer/: lambda_authorizer.py  requirements.txt
bmh_admin_portal_backend/lambdas/lambda_authorizer/tests/: test_lambda_authorizer.py
bmh_admin_portal_backend/lambdas/sns_trigger_lambda/: total_usage_trigger_handler.py
bmh_admin_portal_backend/lambdas/step_functions_handler/src/: constants.py  util.py
bmh_admin_portal_backend/lambdas/step_functions_handler/src/db/: client.py
bmh_admin_portal_backend/lambdas/step_functions_handler/src/email/: email.py
bmh_admin_portal_backend/lambdas/step_functions_handler/src/handlers/: email_handler.py  failure_handler.py  provision_brh_handler.py  success_handler.py
bmh_admin_portal_backend/lambdas/workspaces_api_resource/: workspaces_api_resource_handler.py
bmh_admin_portal_backend/lambdas/workspaces_api_resource/email_helper/: email_helper.py
bmh_admin_portal_backend/scripts/: add_verified_user.py  get_id_token.py  test.py
bmh_admin_portal_backend/tests/: conftest.py  test_lambda_authorizer.py  test_workspace_api_resource_handler.py
bmh_admin_portal_ui/: README.md  README_DEPLOYMENT.md  app.py  package-lock.json  package.json  setup.py  webpack.config.js
bmh_admin_portal_ui/public/: index.html
bmh_workspace/: README.md  app.py  build.sh  deploy.sh  setup.py
docs/: README.md
misc_templates/: cross-account-role.yml
request_workspace_ui/: README.md  app.py  setup.py
workspace_account_manager_ui/: .secrets.baseline  README_DEPLOYMENT.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
workspace_creation/: README.md  app.py  setup.py
(+111 files in other folders)
