[tool.pytest.ini_options]
pythonpath = [
  ".", "lambdas/workspaces_api_resource"
]

[tool.poetry]
name = "bmh_admin_portal_backend"
version = "0.1.0"
description = "BMH Payment Management Portal"
authors = ["CTDS"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26"

[tool.poetry.dev-dependencies]
moto = "^4.1.1"
openapi-core = "*"
pytest = "^6.0.0"
pytest-cov = "*"
pyyaml = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
