[tool.poetry]
name = "bmh_admin_portal_backend"
version = "0.1.1"
description = "BMH Payment Management Portal"
authors = ["CTDS"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.13,<4"
boto3 = ">=1.40.2"
botocore = "*"
jwt = ">=1,<2"
aws-cdk-lib = ">=2.160.0,<3"
constructs = ">=10.3.0,<11"
aws-cdk.aws-lambda-python-alpha = ">=2.160.0-alpha.0"
warrant = ">=0.6.1"

[tool.poetry.group.dev.dependencies]
moto = ">=4.1.1"
docker = ">=6.0.0"
openapi-core = ">=0.17.0"
pytest = ">=6.0.0"
pytest-cov = "*"
pyyaml = ">=6.0.0"
deptry = ">=0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
extend_exclude = ["lambdas/lambda_authorizer/tests"]
